--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.11.4",
+    "@stripe/firestore-stripe-payments": "^0.0.6",
     "firebase": "^9.15.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-player": "^2.11.0",
     "recoil": "^0.7.6",
@@ -26,6 +28,8 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.4",
     "tailwindcss-textshadow": "^2.1.3",
