--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
     "@mui/material": "^5.15.6",
-    "@stripe/firestore-stripe-payments": "^0.0.6",
-    "firebase": "^10.7.2",
+    "@stripe/firestore-stripe-payments": "0.0.6",
+    "firebase": "10.7.2",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
