--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "build": "next build",
     "start": "next start"
   },
+  "resolutions": {
+    "@firebase/firestore": "3.13.0",
+    "@firebase/app": "0.7.13"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
